--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   </nav>
     <section class="showcase-area" id="showcase">
       <div class="showcase-container">
-        <h1 class="main-title" id="home">Eat Right Food</h1>
-        <p>Eat Healty, it is good for our health.</p>
+        <h1 class="main-title" id="home">Welcome on Ashu Project</h1>
+        <p>I am provide HTML/CSS Free fontend devlopping</p>
         <a href="#food-menu" class="btn btn-primary">Menu</a>
       </div>
     </section>
