--- a/index.html
+++ b/index.html
@@ -5,25 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>C.L.M.S.</title>
 </head>
 <body>
-    <header>
-       <ul>
-          <div class="logo"><img src="img/defult_logo.png" alt="Logo"></div>
-           
-           <li><a href="">Home</a></li>
-           <li><a href="">SSB Main Website</a></li>
-           <li><a href="">About SSB</a></li>
-           <li><a href="">Advertisement</a></li>
-           <li><a href="">Recruitments</a></li>
-           <li><a href="">LDC</a></li>
-           <li><a href="">Assistance for candidate</a></li>
-           <li><a href="">FAQS</a></li>
-           <li><a href="">Feedback</a></li>
-       </ul>
+    <nav>
+        <ul>
+            <li class="logo"><img src="img/patana.png" alt="Logo"></li>
+            <li><a href="">Home Page</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="">Social</a></li>
+            <li><a href="">Login/Signup</a></li>
+            <li class="out"><a href="">Logout</a></li>
+        </ul>
 
-    </header>
+    </nav>
+    <div class="main">
+        <p>Login</p>
+        <div class="logn">
+            <input class="un" type="text" name="Username"placeholder="Enter Your Username">
+           <br> <input class="pw" type="password" name="password" placeholder="Enter Password">
+           <br> <input class="btn" type="button" value="Login">
+        </div>
+
+    </div>
+    <div class="ftr">
+        <p> coypyright &copy; Ashuproject</p>
+    </div>
     
 </body>
 </html>
